--- a/client/package.json
+++ b/client/package.json
@@ -73,6 +73,29 @@
     "stylelint": "7.1.0",
     "stylelint-config-standard": "12.0.0",
     "webpack-dev-server": "1.14.1"
+    "babel-core": "^6.9.1",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-runtime": "^6.9.2",
+    "body-parser": "1.15.1",
+    "eslint": "2.12.0",
+    "eslint-plugin-babel": "3.2.0",
+    "eslint-plugin-react": "5.1.1",
+    "json-loader": "^0.5.4",
+    "phantomjs-prebuilt": "2.1.7",
+    "react-transform-hmr": "1.0.4",
+    "stylelint": "6.6.0",
+    "stylelint-config-standard": "9.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-stream": "^3.2.0"
   },
   "browser": {
     "fs": false
