--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@kadira/storybook": "1.31.0",
     "@kadira/storybook-deployer": "github:mporkola/storybook-deployer",
+    "babel-eslint": "6.1.2",
     "babel-plugin-react-transform": "2.0.2",
     "eslint": "3.3.1",
     "eslint-plugin-babel": "3.3.0",
@@ -72,19 +73,6 @@
     "stylelint": "7.1.0",
     "stylelint-config-standard": "12.0.0",
     "webpack-dev-server": "1.14.1"
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "babel-runtime": "^6.9.2",
-    "body-parser": "1.15.1",
-    "json-loader": "^0.5.4",
-    "webpack": "^1.13.1",
-    "webpack-stream": "^3.2.0"
   },
   "browser": {
     "fs": false
